@@ -1,3 +1,10 @@
+2002-11-04  Neil Jerram  <neil@ossau.uklinux.net>
+
+	* debugger/command-loop.scm (read-and-dispatch-command): Import
+	set-readline-prompt dynamically if we need to.  (Previous
+	arrangement didn't work if this module was loaded before (ice-9
+	readline).)
+
 2002-11-03  Marius Vollmer  <mvo@zagadka.ping.de>
 
 	* format.scm (format): Wrap a monitor around format:format since
